# tct-hoca

./: .ghci  .gitignore  README.md  stack-13.20.yaml  stack.dev.yaml  stack.yaml  tct-hoca.cabal
examples/: dfs-flatten.fp
src/: RC.hs  tct-hoca.hs
src/Tct/: RC.hs
src/Tct/Hoca/: Config.hs  Interactive.hs  Processors.hs  Strategies.hs  Types.hs
tct-hoca/: Main.hs
