name:          tct-hoca
version:       1.0
stability:     experimental
author:
  Martin Avanzini, Georg Moser, Michael Schaper
maintainer:
  Martin Avanzini <martin.avanzini@uibk.ac.at>,
  Michael Schaper <michael.schaper@uibk.ac.at>,
license:       BSD3
license-file:  LICENSE
category:      Program Analysis
synopsis:      TcT module for analysing functional programs
description:
  The Tyrolean Complexity Tool (TcT for short) is a tool for proving
  resource bounds for different formal systems. This package provides
  techniques for proving upper bounds on a ML-like language
build-type:    Simple
cabal-version: >= 1.8

source-repository head
  type:     git
  location: git://github.com/ComputationWithBoundedResources/tct-hoca

library
 hs-source-dirs: src
 ghc-options:       
    -threaded -Wall -O2 -fno-warn-orphans
 build-depends:
    ansi-wl-pprint,
    base,
    containers,
    text,

    tct-core,
    tct-trs,

    term-rewriting,
    term-rewriting-applicative,
    hoca
 exposed-modules:
   Tct.Hoca.Strategies
   Tct.Hoca.Types
   Tct.Hoca.Processors
   Tct.RC                                      
 extensions:
   DataKinds
   TypeFamilies
   TypeOperators
   FlexibleContexts
   FlexibleInstances
      
executable tct-hoca
  hs-source-dirs: tct-hoca           
  main-is: Main.hs
  build-depends: base, mtl, tct-hoca ==1.0, tct-core, tct-trs
  ghc-options:
    -Wall -threaded -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
 extensions:
  DataKinds
  TypeSynonymInstances
  MultiParamTypeClasses
  FlexibleInstances
